buildscript {
  repositories {
    mavenCentral()
  }
}

plugins {
  id 'java'
  id 'org.owasp.dependencycheck' version '7.0.3' apply true
}

allprojects {
  sourceCompatibility = '11'
  targetCompatibility = '11'
}

repositories {
  mavenCentral()
}

dependencyCheck {
  suppressionFile = 'config/owasp/suppressions.xml'
  analyzers {
  // Disable scanning of .NET related binaries
    assemblyEnabled = false
  }
  analyzedTypes = ['jar']
  scanConfigurations = ['runtimeClasspath']
}
